# recipe-api-project

./: .env  .env.example  .gitignore  Makefile  README.md  docker-compose-test.yml  docker-compose.yml  main.py  pyproject.toml  pytest.ini  verify_crud.py
app/: config.py  dependencies.py  main.py
app/database/: tortoise_config.py
app/db/: mongodb.py  tortoise_config.py
app/models/: category.py  substitute.py  user.py
app/schemas/: category.py  ingridient.py  pagination.py  recipe.py  subtitute.py  user.py
app/services/: auth_service.py  category_service.py  ingredient_service.py  recipe_service.py
app/utils/: security.py
backend/: .env.test.example  pyproject.toml
backend/app/: config.py  dependencies.py  main.py  worker.py
backend/app/api/v1/: admin.py  auth.py  category.py  ingredients.py  recipes.py  store.py
backend/app/db/: mongodb.py
backend/app/models/mongo/: recipe.py  store_product.py
backend/app/models/tortoise/: ingredient.py  substitute.py
backend/app/schemas/: category.py  ingredient.py  recipe.py  store_product.py  substitute.py  user.py
backend/app/services/: auth_service.py  category_service.py  ingredient_service.py  recipe_service.py  redis_service.py  store_service.py  task_service.py
backend/app/utils/: security.py
backend/scripts/: seed_data.py
backend/tests/: test_admin.py  test_category.py
frontend/: index.html  package-lock.json  vite.config.js
frontend/src/: App.vue  main.js
migrations/models/: 0_20251222172358_init.py
tests/: conftest.py  test_api.py  test_auth.py  test_ingredients.py  test_recipes.py
(+27 files in other folders)
